<resources>
    <string name="app_name">Practising Layouts</string>
    <string name="textview">TextView</string>
    <string name="percent">%</string>
    <string name="_4">4</string>
    <string name="_0">0</string>
    <string name="addition_sign">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="decimal">.</string>
    <string name="equals_sign">=</string>
    <string name="Brackets">()</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="pos_neg">+/-</string>
    <string name="c">C</string>
    <string name="division">/</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="subtraction">-</string>
</resources>